@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'doggo'
-version = '0.1.0'
+version = '0.5.0'
 
 repositories {
     mavenCentral()
@@ -15,19 +15,41 @@ java {
         languageVersion = JavaLanguageVersion.of(25)
     }
 }
-
-
-
 dependencies {
+    String javaFxVersion = '26.0.1'
+
     implementation 'org.xerial:sqlite-jdbc:3.53.4.0'
+
+    implementation("org.openjfx:javafx-base:${javaFxVersion}:win")
+    implementation("org.openjfx:javafx-base:${javaFxVersion}:mac")
+    implementation("org.openjfx:javafx-base:${javaFxVersion}:linux")
+    implementation("org.openjfx:javafx-controls:${javaFxVersion}:win")
+    implementation("org.openjfx:javafx-controls:${javaFxVersion}:mac")
+    implementation("org.openjfx:javafx-controls:${javaFxVersion}:linux")
+    implementation("org.openjfx:javafx-fxml:${javaFxVersion}:win")
+    implementation("org.openjfx:javafx-fxml:${javaFxVersion}:mac")
+    implementation("org.openjfx:javafx-fxml:${javaFxVersion}:linux")
+    implementation("org.openjfx:javafx-graphics:${javaFxVersion}:win")
+    implementation("org.openjfx:javafx-graphics:${javaFxVersion}:mac")
+    implementation("org.openjfx:javafx-graphics:${javaFxVersion}:linux")
+
     testImplementation platform('org.junit:junit-bom:6.1.2')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 application {
-    mainClass = 'doggo.Doggo'
+    mainClass = 'doggo.ui.javafx.DoggoLauncher'
     applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
+}
+
+tasks.register('runCli', JavaExec) {
+    group = 'application'
+    description = 'Runs the doggo command-line application.'
+    classpath = sourceSets.main.runtimeClasspath
+    mainClass = 'doggo.Doggo'
+    standardInput = System.in
+    jvmArgs '--enable-native-access=ALL-UNNAMED'
 }
 
 test {
